2014-01-22  Michael Albinus  <michael.albinus@gmx.de>

	* automated/file-notify-tests.el (file-notify-test02-events):
	Hide Bug#16519, until it is solved.

2014-01-21  Michael Albinus  <michael.albinus@gmx.de>

	* automated/file-notify-tests.el
	(file-notify--test-local-enabled): Fix error in logic.
	(file-notify--wait-for-events): New defmacro.
	(file-notify-test02-events): Make short breaks between file operations.
	Use `file-notify--wait-for-events'.  Check, that events have arrived.
	(file-notify-test03-autorevert): Use `file-notify--wait-for-events'.

	* automated/comint-testsuite.el
	(comint-testsuite-password-strings): Add localized examples.

2014-01-17  Michael Albinus  <michael.albinus@gmx.de>

	* automated/inotify-test.el (inotify-file-watch-simple): Skip test
	case if inotify is not linked with Emacs.  Use `read-event' rather
	than `sit-for' in order to process events.  (Bug#13662)

2014-01-13  Michael Albinus  <michael.albinus@gmx.de>

	* automated/ert-tests.el (ert-test-record-backtrace): Reenable
	test case with adapted test string.  (Bug#13064)

2013-12-28  Glenn Morris  <rgm@gnu.org>

	* automated/electric-tests.el: Require 'elec-pair.

2013-12-26  João Távora  <joaotavora@gmail.com>

	* automated/electric-tests.el (electric-pair-test-for):
	Fix autowrapping tests in batch-mode by running with
	`transient-mark-mode' set to `lambda'.

	* automated/electric-tests.el: New file.

2013-12-25  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* automated/python-tests.el
	(python-nav-lisp-forward-sexp-safe-1): Remove test.
	(python-nav-forward-sexp-safe-1): New test.

2013-12-20  Dmitry Gutov  <dgutov@yandex.ru>

	* automated/ruby-mode-tests.el: Add tests for
	`ruby-align-to-stmt-keywords'.

	* indent/ruby.rb: Update examples to reflect the lack of change in
	default indentation of `begin' blocks.

2013-12-17  Dmitry Gutov  <dgutov@yandex.ru>

	* indent/ruby.rb: Update examples according to the change
	in `smie-indent-close'.
