@@ -1,3 +1,8 @@
+2014-01-26  Michael Albinus  <michael.albinus@gmx.de>
+
+	* automated/file-notify-tests.el (file-notify-test02-events):
+	Let test case fail for Bug#16519.
+
 2014-01-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* automated/file-notify-tests.el (file-notify-test02-events):
